--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REDE DE ATENDIMENTO SALA MINEIRA - Lagoa dos Patos MG</title>
+    <title>REDE DE ATENDIMENTO SISTEMA DE AJUDA MEI</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133729569-2"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments) } gtag("js", new Date()); gtag("config", "UA-133729569-2");</script>
